2000-12-11  Jeffrey Stedfast  <fejj@helixcode.com>

	* configure.in (GMIME_MINOR_VERSION): Updated to 0.3.0

	* gmime-parser.c (get_mime_part): Updated to reflect the
	add_subpart API change.

	* test-mime.c (test_multipart): And here too.

	* gmime-part.h (g_mime_part_add_child): Macro added for backward
	source compatability.

	* gmime-part.c (g_mime_part_get_subpart_from_content_id): Renamed
	from g_mime_part_get_child_from_content_id as I think I'm gonna
	start calling them subparts in the API as it's a bit clearer than
	calling them children. Also fixed up some of the logic (what if
	the parent mime part had a content-id? The way the code was before
	it'd never search the subparts). Oh, it also returns const now.
	(g_mime_part_add_subpart): Renamed from g_mime_part_add_child and
	also now does some error checking to make sure the parent part is
	a multipart.

2000-12-10  Charles Kerr <charles@superpimp.org>

	* gmime-part.c (g_mime_part_get_child_by_content_id): new
	utility function.

2000-12-09  Jeffrey Stedfast  <fejj@helixcode.com>

	* gmime-part.c (g_mime_part_set_boundary): Generate a random
	boundary if passed boundary is NULL.

2000-12-07  Jeffrey Stedfast  <fejj@helixcode.com>

	* gmime-message.c (multipart_get_body): Traverses a MIME Part and
	'always' extracts the body assuming it exists. Extracts the
	preffered text type if it exists, otherwise returns the type less
	preferred.
	(g_mime_message_get_body): Use multipart_get_body if the toplevel
	part is a multipart.

2000-12-05  Jeffrey Stedfast  <fejj@helixcode.com>

	* README: Updated with more RFCs, etc.

	* rfc/* Added a bunch more rfcs of interest.

2000-12-04  Jeffrey Stedfast  <fejj@helixcode.com>

	* test-mime.c: Added test code for the address parser.

	* gmime-utils.c (g_mime_utils_quoted_encode_step): Updated. No
	longer need to special-case whitespace chars as they have been put
	into the gmime_special_table (a while ago).

2000-12-02  Jeffrey Stedfast  <fejj@helixcode.com>
